[gd_scene load_steps=14 format=3 uid="uid://c5hrhwn46vo1p"]

[ext_resource type="Script" uid="uid://btwdejdu30nu5" path="res://scenes/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://do0gw5mpds3eg" path="res://assets/Screenshot (186).png" id="2_8ln24"]
[ext_resource type="FontFile" uid="uid://dh6jh2opb8e4i" path="res://assets/Super Sunkissed.ttf" id="2_bqqt6"]
[ext_resource type="Script" uid="uid://cj5cnyxiucb18" path="res://scenes/audiocontrol.gd" id="4_8ln24"]
[ext_resource type="PackedScene" uid="uid://d2mp2i5iomkay" path="res://scenes/audio_stream_player_2d.tscn" id="5_8ln24"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wu84c"]
texture = ExtResource("2_8ln24")
modulate_color = Color(0.176419, 0.176419, 0.176419, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekxnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.847474, 0.847475, 0.847474, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 2
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(0.625597, 0.625597, 0.625596, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 2
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(0.91664, 0.91664, 0.91664, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 2
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wu84c"]
color = Color(0.856067, 0.856067, 0.856067, 1)
thickness = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8ln24"]
color = Color(0.356149, 0.197041, 0.0193035, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_rtw2f"]
color = Color(0.356149, 0.197041, 0.0193035, 1)
thickness = 6

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqqt6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wu84c")

[node name="Main_buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.5
offset_top = -31.0
offset_right = 226.5
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="start" type="Button" parent="Main_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Start game"

[node name="options" type="Button" parent="Main_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Options"

[node name="quit" type="Button" parent="Main_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Quit
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.5
offset_top = -224.0
offset_right = 275.5
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 15
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 110
text = "DegeN Jump"
horizontal_alignment = 1
vertical_alignment = 1

[node name="option-buttons" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -241.0
offset_top = -82.0
offset_right = 241.0
offset_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="option-buttons"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 47.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 35
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="Label" parent="option-buttons"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 22.0
offset_top = -103.0
offset_right = 156.0
offset_bottom = -54.0
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Music :"
horizontal_alignment = 1
vertical_alignment = 1

[node name="quit" type="Button" parent="option-buttons"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -74.0
offset_right = -13.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Back
"

[node name="Audiocontrol" type="HSlider" parent="option-buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -55.0
offset_right = 154.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_wu84c")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_8ln24")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_rtw2f")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("4_8ln24")
audio_bus_name = "Music"

[node name="AudioStreamPlayer2D" parent="." instance=ExtResource("5_8ln24")]

[connection signal="pressed" from="Main_buttons/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Main_buttons/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main_buttons/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="option-buttons/quit" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="option-buttons/Audiocontrol" to="option-buttons/Audiocontrol" method="_on_value_changed"]
